--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,6 +37,8 @@ jobs:
         uses: actions/setup-python@v5 
         with:
           python-version: '3.12.3'
+      - name: Set up Python
+        run: pip install streamlit
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
